--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ keywords = [
 ]
 
 [dependencies]
-embedded-hal = { version = "0.2.6", features = ["unproven"] }
+embedded-hal = { version = "=1.0.0-alpha.8"}
+embedded-hal-0-2 = { package = "embedded-hal", version = "0.2", features = ["unproven"] }
 nb = "1.0.0"
 void = { version = "1.0.2", default_features = false }
 serialport = { version = "4.0.1", optional = true }
