--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,9 @@ keywords = [
 ]
 
 [dependencies]
-embedded-hal = { version = "=1.0.0-alpha.9" }
+embedded-hal = "1"
 embedded-hal-0-2 = { package = "embedded-hal", version = "0.2", features = ["unproven"] }
-nb = "1.0.0"
+nb = "1.1.0"
 void = { version = "1.0.2", default_features = false }
 serialport = { version = "4.2.0", optional = true }
 
@@ -37,5 +37,5 @@ required-features = ["std"]
 [dev-dependencies]
 # hsu-test-serialport
 log = "0.4"
-env_logger = "0.7"
-clap = "2.33.3"
+env_logger = "0.11"
+clap = "4.5"
